# opsdroid_docker

./: .env example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: configuration.yaml
skills/: gitlab.py  ping.py  settings.py
skills/gitlab/: __init__.py  requirements.txt
