[tool.poetry]
name = "chatops_docker"
version = "0.1.0"
description = ""
authors = ["Artur Akmalov <akmalov.mail@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
opsdroid = "^0.26.0"
emoji = "^2.0.0"
slack-sdk = "^3.18.0"
python-gitlab = "^3.6.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
